--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "got": "^11.8.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "sass": "^1.40.1"
+    "sass": "^1.40.1",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "react-scripts": "4.0.3"
