--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "yunojuno-react-code-test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "got": "^11.8.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "sass": "^1.40.1",
-    "typescript": "^4.5.2"
-  },
-  "devDependencies": {
-    "react-scripts": "4.0.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "watch-css": "sass src/:src/ --no-source-map --watch"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "yunojuno-react-code-test",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/jest": "^27.0.3",
+        "@types/node": "^16.11.10",
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
+        "got": "^11.8.3",
+        "prettier": "^2.5.0",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "sass": "^1.40.1",
+        "typescript": "^4.5.2"
+    },
+    "devDependencies": {
+        "react-scripts": "4.0.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "watch-css": "sass src/:src/ --no-source-map --watch"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
