--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@testing-library/jest-dom": "^5.15.1",
+        "@testing-library/react": "^12.1.2",
         "@types/jest": "^27.0.3",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
